--- a/three1/templates/base.html
+++ b/three1/templates/base.html
@@ -6,7 +6,7 @@
     {% if title %}
     <title>{{ title }}</title>
     {% else %}
-    <title>Про Flask</title>
+    <title>Купить авто</title>
     {% endif %}
     {% endblock %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
@@ -26,7 +26,7 @@
     {% if title %}
     <h1>{{ title }}</h1>
     {% else %}
-    <h1>Про Flask</h1>
+    <h1>Купить Авто</h1>
     {% endif %}
 {% endblock %}
 </div>
