--- a/three1/static/css/style.css
+++ b/three1/static/css/style.css
@@ -2,23 +2,27 @@ body{
     background: lightyellow;
     margin: 0;
     padding: 0;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Verdana, Geneva, Tahoma,sans-serif;
 }
 
 .menu{
     display: flex;
+    flex-wrap:wrap;
+     flex-direction:row;
     justify-content: space-around;
     list-style: none;
-    background: orange;
+    background: lightblue;
     padding: 20px;
-    margin-top: 0;
-}
+    margin: 20;
+    Color: FFFFFF;
+    }
 
 .content{
     margin: 0 auto;
     max-width: 1200px;
     padding: 20px;
     box-sizing: border-box;
+    text-align: center;
 }
 
 .flash{
@@ -34,20 +38,29 @@ body{
     border: 1px solid #FF4343;
     background: #FF9C9C;
 }
-
-.menu a{
-    font-weight: bold;
-    color: brown;
+menu.a{
+font-weight: bolt;
+color: lightblue;
 }
-
 ul{
-    list-style: none;
-    padding: 0;
+   list-style: none;
+   padding: auto;
+   margin:auto;
+    display: flex;
+    justify-content: space-between;
+     text-align: center;
 }
+li{
+margin-left:20px;
+   margin-top:20px;
+   margin-right:20px;
+   margin-bottom:20px;}
 
 .title a{
     text-decoration: none;
-    color: brown;
+    color:  #FFFFFF;
+    display: flex;
+     text-align: center;
 }
 
 .title, .annonce{
@@ -58,7 +71,7 @@ ul{
 .title{
     margin: 0;
     font-weight: bold;
-    background: gold;
+    background: lightblue;
 }
 
 .title a{
