--- a/seven/password_generator_project/generator/templates/generator/home.html
+++ b/seven/password_generator_project/generator/templates/generator/home.html
@@ -1,11 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title> {{ title }} </title>
-</head>
-<body>
-<h1> Home page </h1>
-{{password}}
-</body>
-</html>
+{% extends 'generator/base.html' %}
+{% block content %}
+
+<h1> Генератор паролей </h1>
+<form action="{% url 'password' %}">
+    <p><select name="length">
+        {% for i in lst %}
+        {% if i == 12 %}
+        <option value="{{i}}">{{ i }}</option>
+        {% else %}
+        <option value="{{i}}">{{ i }}</option>
+        {% endif %}
+        {% endfor %}
+    </select>Количество символов</p>
+    <p>
+        <input type="checkbox" name="uppercase">Верхний регистр <br>
+        <input type="checkbox" name="numbers"> Цифры <br>
+        <input type="checkbox" name="special"> Спецсимволы <br>
+    </p>
+        <input type="submit" value="Сгенерировать пароль">
+</form>
+<h2> {{password}} </h2>
+<p><a href="{% url 'rules' %}"> Правила генерации пароля </a></p>
+{% endblock%}
