--- a/eight/personal_portfolio/skills/templates/skills/index.html
+++ b/eight/personal_portfolio/skills/templates/skills/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 
-<h1> Портфолио художника "Иван Иванович Шишкин"</h1>
+<h1> Портфолио художника</h1>
 
 <div class="img">
     <img src="{% static 'skills/IS.jpg' %}" alt="">
