--- a/second_/personal_portfolio/skills/templates/skills/base.html
+++ b/second_/personal_portfolio/skills/templates/skills/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="{% static 'css/style1.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="icon" href="{% static 'skills/favicon.ico' %}">
 </head>
 <body>
